--- a/src/styles/active.css
+++ b/src/styles/active.css
@@ -1,8 +1,3 @@
-.page-container {
-  background-color: rgb(221, 230, 220);
-  min-height: 100vh;
-}
-
 .header-image {
   width: 90%;
   object-fit: cover;
@@ -11,14 +6,13 @@
   left: 0;
 }
 
-/* our popup modal when the user wants to enter a product*/
 .popup {
 background-color: rgb(208, 240, 192);
 padding: 20px;
 border-radius: 10px;
 box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
 width: 300px;
-font-family: poppins;
+font-family: roboto;
 position: relative;
 z-index: 2;
 }
@@ -42,29 +36,24 @@ padding: 10px;
 margin-bottom: 10px;
 border: 1px solid #ccc;
 border-radius: 5px;
-font-family: poppins;
+font-family: roboto;
 }
 
 .popup button {
-font-family: poppins; 
+font-family: roboto; 
 }
 
-/* prevent list lines from overlapping */
+.custom-list-item {
+  list-style-type: square;
+}
+
 .custom-list-item::after {
 z-index: 0;
 }
 
-.custom-list {
-  list-style-type: square;
-  padding-left: 20%;
-}
-
 .custom-list-item {
-  margin-bottom: 20px;
-  padding-left: 1%;
-  font-family: poppins;
+  font-family: roboto;
   font-size: 1.2rem;
-  position: relative;
 }
 
 .custom-list-item::after {
@@ -78,12 +67,10 @@ z-index: 0;
 }
 
 .custom-list-item button {
-  display: none;
   position: absolute;
   left: 75%;
 }
 
-/* shows button whenever we hover over element in the list  */
 .custom-list-item:hover button {
   display: inline-block;
 }
@@ -93,4 +80,42 @@ z-index: 0;
   color: white;
 }
 
+.last-ten {
+  margin-top: 8%;
+}
 
+.last-ten-header {
+  margin-bottom: 3%;
+  text-align: center;
+  font-family: roboto;
+}
+
+.button-row {
+  position: relative;
+  margin: 20px auto; 
+  height: 50px;
+  font-family: roboto;
+}
+
+.clear-button {
+  position: absolute;
+  margin-top: 3%;
+  left: 45%;
+}
+
+.add-button {
+  margin-top: 3%;
+  position: absolute;
+  right: 17%; 
+}
+
+.add-button-centered {
+  margin-left: 48%;
+}
+
+
+.empty-text {
+  font-family: roboto;
+  font-size: 30px;
+  text-align: center;
+}
