--- a/src/styles/active.css
+++ b/src/styles/active.css
@@ -113,9 +113,32 @@ z-index: 0;
   margin-left: 48%;
 }
 
-
 .empty-text {
   font-family: roboto;
   font-size: 30px;
   text-align: center;
+}
+
+.autocomplete-list {
+  margin-top: 5px;
+  padding: 0;
+  list-style: none;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  max-height: 150px;
+  overflow-y: auto;
+  z-index: 10;
+  position: absolute;
+  width: 87%;
+}
+
+.autocomplete-item {
+  padding: 10px;
+  cursor: pointer;
+  font-family: roboto;
+}
+
+.autocomplete-item:hover {
+  background-color: rgb(208, 240, 192);
 }
